# NeuralNetwork

./: MANIFEST.in  conv_func.c  initializers.py  layers.py  models.py  pooling_avg_func.c  pooling_max_func.c  pyproject.toml  setup.py
nn/: __init__.py  _template.py  activations.py  agent.py  branch.py  branch.pyi  conv_func.pyi  initializers.py  layers.py  layers.pyi  losses.py  models.py  models.pyi  optimisers.py  parameter.py  pooling_max_func.pyi  template.py
nn/utils/: graph.py  progess_bar.py
src/nn/: __init__.py  _template.py  activations.py  conv_func.pyi  initializers.py  layers.py  losses.py  models.py  optimisers.py
src/nn/utils/: progess_bar.py
tests/min_val/: load.py  train.py  training.ptd
tests/mnist/: train.py  training.ptd
tests/xor/: load.py  train.py  training.ptd
