[build-system]
requires = ["setuptools", "numpy"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10.0"
dependencies = ["numpy", "matplotlib"]
name = "py-nn"
version = "0.2.3"
description = "Neural network created from scratch inspired by keras."
authors = [{name = "Geya Wang", email = "geyaewang@gmail.com"}]

[project.urls]
Repository = "https://github.com/GeyaWang/py-nn.git"
